--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/createCommunity.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/createCommunity.scss
@@ -2,10 +2,11 @@
     display: flex;
     align-items: center;
     position: absolute;
+    z-index: 10;
     margin: 10px;
     background: white;
     padding: 50px;
-    top: 15%;
+    top: 25%;
     left: 18%;
     border-radius: 25px;
     border: 4px solid gray;
