Add a new feature for Community and My env
Add a new features to communitites:
 - add alert: now when community will be in updating you can see alert about it;
 - invities to community will be show if you have any invities;

Add a new feature for my environment:
 - my requests and requests from another people moved to 'Friedns' tab. Requests panel will be show only if you have your own requests and/or requests from another people

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/selectedCommunity.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/selectedCommunity.scss
@@ -73,7 +73,7 @@
             }
         }
 
-        .add-new-people, .remove-people, .leave-from-community {
+        .remove-people, .leave-from-community {
             position: absolute;
             display: flex;
             flex-direction: column;
