--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/communities.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/communities.scss
@@ -2,6 +2,11 @@
     display: flex;
     flex-direction: column;
 
+    .invite-to-community {
+        width: 100%;
+        padding: 10px 50px;
+    }
+
     &__list {
         display: flex;
         flex-direction: column;
