Add RTK Query Automation fetch in interval

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/groupChat.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/groupChat.scss
@@ -27,7 +27,7 @@
             }
         }
 
-        .people-inspection-handler {
+        .people-inspection-handler, .add-new-people-handler {
             color: black;
 
             &-active {
