Remove extra services from web app

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/post.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/post.scss
@@ -43,18 +43,20 @@
         justify-content: space-between;
     }
 
-    &__title-username {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
+    &__title {
+        &_username, &_details {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
 
-        svg {
-            margin: 0 10px;
-        }
+            svg {
+                margin: 0 10px;
+            }
 
-        svg:hover {
-            cursor: pointer;
-            transform: scale(1.1);
+            svg:hover {
+                cursor: pointer;
+                transform: scale(1.1);
+            }
         }
     }
 
