--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/addPeople.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/addPeople.scss
@@ -1,53 +1,88 @@
 .add-new-people {
-    position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 300px;
-    padding: 10px;
-    top: 3%;
-    left: 40%;
-    border: 2px solid gray;
-    border-radius: 15px;
-    background: white;
+    padding: 5px;
 
-    &__content, &__title {
+    &__title {
+        display: flex;
+        align-items: center;
+
+        svg {
+            margin: 0 15px;
+        }
+    }
+
+    &__search {
+        display: none;
+
+        &_active {
+            display: flex;
+            flex-direction: column;
+        }
+    }
+
+    &__content {
+        display: none;
+
+        &_active {
+            display: flex;
+            margin: 5px;
+            flex-direction: column;
+            min-width: 200px;
+        }
+    }
+
+    &__content, &__search-title {
         margin: 5px;
     }
 
     &__invite-alert {
         margin: 5px;
-        font-size: 14px;
+        font-size: 1px;
     }
 
     &__content-title {
         display: flex;
         justify-content: space-around;
         align-items: center;
-        width: 175px;
     }
 
     &__list {
-        max-height: 150px;
-        margin: 5px;
-        width: 200px;
-        overflow-y: auto;
-        overflow-X: hidden;
+        display: none;
+
+        &_active {
+            display: flex;
+            flex-direction: column;
+            max-height: 150px;
+            margin: 5px;
+            overflow-y: auto;
+            overflow-X: hidden;
+
+            .empty {
+                text-align: center;
+                opacity: 0.5;
+            }
+        }
     }
 
     &__more {
-        display: flex;
-        justify-content: center;
-        margin: 15px 0;
+        display: none;
 
-        button {
-            font-size: 11px;
+        &_active {
+            display: flex;
+            justify-content: center;
+            margin: 15px 0;
+
+            button {
+                font-size: 11px;
+            }
         }
     }
 
     .person {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
         margin: 5px 0;
     }
