--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/createGroupChat.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/createGroupChat.scss
@@ -4,8 +4,8 @@
     justify-content: space-between;
     align-items: center;
     border-radius: 25px;
-    width: 750px;
-    height: 350px;
+    width: 700px;
+    height: 500px;
     padding: 10px;
     box-shadow: 5px 5px 5px 5px gray;
     background: white;
@@ -13,7 +13,6 @@
     &__container {
         display: flex;
         flex-direction: row;
-        width: 750px;
     }
 
     &__menu {
@@ -24,10 +23,25 @@
         border-radius: 15px;
 
         .menu-item {
+            display: flex;
+            align-items: center;
+            opacity: 0.5;
             margin: 5px;
             cursor: pointer;
             padding: 10px;
             border-radius: 10px;
+
+            svg {
+                margin: 0 10px;
+            }
+
+            &__passed {
+                color: green;
+            }
+        }
+
+        .menu-item.passed {
+            opacity: 1;
         }
 
         .menu-item:hover {
@@ -49,11 +63,35 @@
         }
     }
 
-    &__accept {
-        margin: 10px;
+    &__item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 
-        input {
-            margin: 5px;
+    .chat-policy {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        width: 100%;
+
+        &__policy {
+            display: flex;
+            flex-direction: column;
+
+            .form-check {
+                margin: 10px;
+            }
+        }
+    }
+
+    .chat-rules {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+
+        &__rules {
+            margin: 10px;
         }
     }
 }
