--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
@@ -132,6 +132,26 @@
                 }
             }
 
+            .add-people-to-community {
+                position: fixed;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                border-radius: 25px;
+                right: 35%;
+                padding: 10px;
+                width: 500px;
+                height: 400px;
+                box-shadow: 5px 5px 5px 5px gray;
+                background: white;
+
+                .item-result {
+                    display: flex;
+                    gap: 10px;
+                }
+            }
+
             .member {
                 display: flex;
 
