--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/community/selectedCommunity.scss
@@ -140,9 +140,10 @@
                 align-items: center;
                 border-radius: 25px;
                 right: 35%;
+                bottom: 20%;
                 padding: 10px;
                 width: 500px;
-                height: 400px;
+                min-height: 400px;
                 box-shadow: 5px 5px 5px 5px gray;
                 background: white;
 
