Update remove from users from groupChat

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/groupChat.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/groupChat.scss
@@ -114,6 +114,15 @@
                             }
                         }
                     }
+
+                    .item-result {
+                        display: flex;
+                        gap: 10px;
+
+                        input {
+                            font-size: 12px;
+                        }
+                    }
                 }
             }
 
